* Renamed Import/Export icon to Configuration Import/Export
* Upgraded ma-priv to 1.1.5 due to ssl, startup and shutdown enhancements
* Upgraded serotonin-utils to 2.0.1 to capture new Serial Port stream enhancements that improve reliability
* Adding shutdown button to modules page and creating startup/shutdown pages to show users the system progress during these times.

*Version 2.2.1*
* License bug where web server was loaded before license and was always limiting ip addresses to 3


*Version 2.2.0*
* Changed browser to open immediately to show startup screen
* Fixed bug at startup where some conditions could cause Mango to hang if an error was detected.  Now Mango should shutdown after fatal errors during startup.
* Added jSSC Serial Port library for easier use of serial port, RXTX has now been removed from the core and placed into any modules that still require it.
* Fixed bug in Event Report View where custom event types were failing to show up
* Added help to Chart view on data point details page to explain the Chart Servlet feature
* Cleaned up css styling on data source page
* Fixed bug on Data Source page where data source points table was leaving extra columns from previously viewed data sources
* Fixed bug on Data Source page where the enable/disable light could get out of sync with the actual state of the data source 
* Fixed bugs on Data Point Settings tab where both the Purge Override settings and Discarding Extreme Values were not saving.
* Added db.useMetrics env boolean property to allow all queries to report times via the INFO log level.
* Fixed bug in JScience Library where any units with a 4 in the numerical multiplier would fail to load.
* Added workaround for bug on pages that try to hide() a node that isn't there.  This used to crash the page, now it logs the error to the js console if it exists, otherwise it is silent.