@@ -209,13 +209,24 @@
 	
 	   <target name="dev-build" depends="dev-jar" description="Merge Changes from Core Project into target during development">
 
+	   	    <copy todir="${build.dir}/classes" preservelastmodified="true">
+	   	            <fileset dir="classes"><include name="**/*.*"/></fileset>
+	   	    </copy>
 	        <copy todir="${build.dir}/db" preservelastmodified="true">
 	            <fileset file="db/createTables-DERBY.sql"/>
 	            <fileset file="db/createTables-MSSQL.sql"/>
 	            <fileset file="db/createTables-MYSQL.sql"/>
 	            <fileset file="db/createTables-POSTGRES.sql"/>
 	        </copy>
-	        
+	       
+	   	    <!-- Copy the Scripts into the target -->
+	        <copy todir="${build.dir}/bin" preservelastmodified="true">
+	            <fileset dir="scripts" includes="**/*.bat" />
+	            <fileset dir="scripts" includes="**/*.sh" />
+	        </copy>
+	        <!-- CHMOD the Linux scripts -->
+	        <chmod dir="${build.dir}/bin" includes="**/*.sh" perm="755" />
+	   	
 	        <copy todir="${build.dir}/ftl" preservelastmodified="true">
 	            <fileset dir="ftl"><include name="**/*.*"/></fileset>
 	        </copy>
@@ -247,8 +258,10 @@
 	
     <target name="dev-release" description="Zip Contents of Target for Development Release">
         <fixcrlf srcdir="scripts" includes="**/*.sh" eol="lf" eof="remove" />
-        
-        <zip destfile="${fullName}-dev.zip">
+    	
+    	<!-- create the release directory if DNE -->
+    	<mkdir dir="release"/>
+        <zip destfile="release/${fullName}-dev.zip">
             <fileset dir="">
                 <include name="RELEASE-NOTES" />
                 <include name="licenseTypes.xml" />
