@@ -217,6 +217,9 @@ common.duration =Duration
 common.durationStd={0}
 common.durationDays={0} days
 
+common.user.userDisabled=User {0} is disabled.
+common.user.suUserComplete=User changed to {0}
+
 share.sharing=Sharing
 share.userName=Username
 share.accessType=Access type
